[tool.poetry]
name = "api"
version = "0.1.0"
description = "Kweek's api"
authors = ["Nelson Kamga <kamganelson@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
ariadne = "0.12.0"
boto3 = "1.14.47"
botocore = "1.17.47"
click = "7.1.2"
docutils = "0.15.2"
flask-cors = "3.0.8"
flask-jwt-extended = "3.24.1"
flask = "1.1.2"
graphql-core = "3.0.5"
graphqlclient = "0.2.4"
gunicorn = "20.0.4"
huey = "2.3.0"
itsdangerous = "1.1.0"
jinja2 = "2.11.2"
pendulum = "*"
psycopg2-binary = "2.8.5"
python-dateutil = "2.8.1"
python-dotenv = "0.14.0"
pytz = "2020.1"
pytzdata = "2020.1"
redis = "3.5.3"
requests = "2.24.0"
s3transfer = "0.3.3"
six = "1.15.0"
slackclient = "1.3.2"
urllib3 = "1.25.10"
werkzeug = "1.0.1"
orator = "^0.9.9"
flask-orator = "^0.2.0"
satchless = "^1.2.0"
restless = "^2.1.1"
python-slugify = "^4.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
