[tool.poetry]
name = "api"
version = "0.1.0"
description = "Kweek's api"
authors = ["Nelson Kamga <kamganelson@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7, <3.9"
boto3 = "1.14.47"
botocore = "1.17.47"
gunicorn = "20.0.4"
huey = "2.3.0"
itsdangerous = "1.1.0"
psycopg2-binary = "2.8.5"
python-dotenv = "0.14.0"
redis = "3.5.3"
requests = "2.22.0"
s3transfer = "0.3.3"
six = "1.12.0"
slackclient = "1.3.2"
urllib3 = "1.25.3"
phonenumbers = "^8.12.9"
django = "^3.1.1"
djangorestframework = "^3.11.1"
django-extensions = "^3.0.8"
django-environ = "^0.4.5"
django-phone-verify = "^2.0.0"
django-money = "^1.1"
django-cors-headers = "^3.5.0"
django-storages = "^1.10"
djangorestframework-simplejwt = "^4.4.0"
Pillow = "^7.2.0"
sentry-sdk = "^0.17.4"
stripe = "^2.51.0"
kkiapay = "^0.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
