[tool.poetry]
name = "api"
version = "0.1.0"
description = "Kweek's api"
authors = ["Nelson Kamga <kamganelson@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7, <3.9"
boto3 = "^1.17.73"
gunicorn = "20.0.4"
itsdangerous = "1.1.0"
psycopg2-binary = "2.8.5"
python-dotenv = "0.14.0"
redis = "3.5.3"
requests = "2.25.1"
six = "1.16.0"
slackclient = "1.3.2"
urllib3 = "^1.26.4"
phonenumbers = "^8.12.9"
django = "^3.1.1"
djangorestframework = "^3.11.1"
django-extensions = "^3.0.8"
django-environ = "^0.4.5"
django-phone-verify = "^2.0.0"
django-money = {extras = ["exchange"], version = "^1.3.1"}
django-cors-headers = "^3.5.0"
django-storages = "^1.10"
djangorestframework-simplejwt = "^4.4.0"
Pillow = "^7.2.0"
sentry-sdk = "^1.0"
stripe = "^2.51.0"
django-hosts = "^4.0"
whitenoise = "^5.2.0"
onesignal-sdk = "^2.0.0"
celery = "^5.0.5"
python-telegram-bot = "^13.4.1"
django-request-logging = "^0.7.2"
messagebird = "^1.5.0"
stellar-sdk = "^3.3.3"
django-cryptography = "^1.0"
drf-nested-routers = "^0.93.3"
hashids = "^1.3.1"
logdna = "^1.18.1"

[tool.poetry.dev-dependencies]
coverage = "^6.3.2"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.masonry.api"

[tool.black]
skip-string-normalization = true
line-length = 120
extend-exclude = '''
/(
    \.git
  | migrations
)/
'''

[tool.isort]
profile = "black"
known_web = "django,rest_framework,"
known_quatro = "kash"
known_service = "celery,"
sections = "FUTURE,STDLIB,THIRDPARTY,WEB,QUATRO,SERVICE,FIRSTPARTY,LOCALFOLDER"
extend_skip = "migrations"
skip_gitignore = true

[tool.pylint.master]
ignore = [
    "migrations",
    "config.py",
]
load-plugins = [
    "pylint_django"
]
django-settings-module = "app_main.settings"

[tool.pylint.format]
max-line-length = "125"

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
]

[tool.pylint.design]
min-public-methods = 1
max-parents = 15

[tool.pylint.variables]
ignored-argument-names = "pk|obj|request|token_type|args|kwargs|sender"

[tool.pylint.basic]
good-names = [
    "_", "i", "e", "k", "v", "x", "pk", "qs", "setUp", "tearDown", "maxDiff"
]
